# sw-maestro-project

projects/team46-upstagezzang/: .env.example  .gitignore  Dockerfile  README.md  architecture.mmd  compose.yml  flake.nix  justfile  langgraph_report_flows.mmd  pyproject.toml  requirements.txt
projects/team46-upstagezzang/src/: config.py  main.py  models.py  sample_data.json  sample_data.py  session.py
projects/team46-upstagezzang/src/agent/: conversation.py  graph.py  prompts.py  prompts.toml
projects/team46-upstagezzang/src/core/: embedding.py  llm.py  parser.py
projects/team46-upstagezzang/src/db/: metadata_store.py  vector_store.py
projects/team46-upstagezzang/src/service/: analyzer.py  checker.py  cross_insight.py  trend.py
projects/team46-upstagezzang/src/ui/: chat.py  confirm.py  list_view.py  report.py  sidebar.py  trend.py
