[project]
name = "asmchat"
version = "0.1.0"
description = "SW Maestro project planning assistant system"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "tavily-python>=0.5.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
asmchat = "src.main:main"

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
